# web-summary

./: .gitignore  .pre-commit-config.yaml  .textlintignore  AGENTS.md  EFFICIENCY_REPORT.md  README.md  assemble_markdown.py  body.md  convert_to_markdown.py  extract_and_summarize.py  extract_metadata.py  fetch_page.py  fetched_page.html  finalize_file_location.py  md template  metadata.json  package-lock.json  package.json  pdf_to_text.py  pyproject.toml  pyrightconfig.json  repository_summary.md  requirements.txt  scrape.py  summary_ja.txt  test_efficiency.py  video_embed.py
.github/workflows/: instant-automerge.yml
2023/07/prettier.io/: 2023-07-05_3-0-0-html.md
2025/05/anthropic.com/: 2025-05-01_claude-can-now-connect-to-your-world.md
2025/05/arxiv.org/: 2025-05-23_frankentext-stitching-random-text-fragments-into-long-form-narratives.md  2025-05-26_masksearch-a-universal-pre-training-framework-to-e.md  2025-05-26_masksearch-a-universal-pre-training-framework-to-enhance-agentic-search-capability.md  2025-05-30_prorl-prolonged-reinforcement-learning-expands-reasoning-boundaries-in-large-language-models.md  (+2 more)
node_tools/: lint-summary.js  run_prettier.js
python_tools/: fetch_paper.py  pdf_to_markdown.py  pdf_to_text.py  scrape.py  setup_playwright.py
tests/: test_animation_links.py  test_author.py  test_author_subdomain.py  test_domain_folder.py  test_efficiency.py  test_format_check.py  test_gif_links.py  test_image_links.py  test_markdown_syntax.py  test_summary_placeholder.py  test_video_links.py
tests/test/: gif.md  image.md
tools/: scrape.py
(+281 files in other folders)
